Don't bring slop to a slop fight

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,27 +18,23 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://protectdemocracy.org/how-to-protect-democracy">How you can protect Democracy</a>”</li>
 <li>“<a href="https://dansinker.com/posts/2025-02-23-dale">What felt impossible became possible</a>” by <strong>Dan Sinker</strong></li>
-<li>“<a href="https://www.youtube.com/watch?v=QEJpZjg8GuA">Algorithms are breaking how we think</a>” by <strong>Alec Watson</strong></li>
 <li>“<a href="https://craigmod.com/ridgeline/203">Garbage</a>” by <strong>Craig Mod</strong></li>
 <li>“<a href="https://www.doc.cc/articles/beautiful-boring-and-without-soul">Beautiful, boring, and without soul</a>” by <strong>Steyn Viljoen</strong></li>
 <li>“<a href="https://alexgaynor.net/2025/feb/19/tech-workers-monopoly-and-monopsony">Tech workers and monopolies</a>” by <strong>Alex Gaynor</strong></li>
 <li>“<a href="https://www.wheresyoured.at/longcon">Generative AI con</a>” by <strong>Edward Zitron</strong></li>
-<li>“<a href="https://rknight.me/blog/quiet">Quiet</a>” by <strong>Robb Knight</strong></li>
 <li>“<a href="https://bobbiec.github.io/white-elephant.html">White Elephant is surprisingly effective</a>” by <strong>Bobbie and Yee Aun</strong></li>
 <li>“<a href="https://blog.cloudflare.com/offline-celebrations-how-christmas-nye-and-lunar-new-year-festivities-shape-online-behavior">Offline celebrations affect internet traffic</a>”</li>
 <li>“<a href="https://www.joanwestenberg.com/when-screens-remove-our-better-angels">Screens remove social friction and higher-order thinking</a>” by <strong>Joan Westenberg</strong></li>
 <li>“<a href="https://andysblog.uk/why-blog-if-nobody-reads-it">Why blog if no one reads it?</a>” by <strong>Andy Hawthorne</strong></li>
 <li>“<a href="https://xkcd.com/743">Caring about infrastructure</a>” by <strong>Randall Munroe</strong></li>
-<li>“<a href="https://pudding.cool/2023/09/invisible-epidemic">Loneliness epidemic</a>” by <strong>Alvin Chang</strong></li>
 <li>“<a href="https://www.wheresyoured.at/never-forgive-them">Never Forgive Them</a>” by <strong>Ed Zitron</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=4ouNbLgJEHA">Degrow or die: resource consumption of LLMs</a>” by <strong>Thomas Fricke</strong></li>
 <li>“<a href="https://www.joanwestenberg.com/the-only-true-goal-is-boredom">Boredom</a>” by <strong>Joan Westenberg</strong></li>
 <li>“<a href="https://anildash.com/2025/01/04/DOGE-procurement-capture">DOGE is procurement capture</a>” by <strong>Anil Dash</strong></li>
 <li>“<a href="https://www.thefp.com/p/the-year-of-mcdonalds-trump-luigi-mangione">The year of McDonald’s</a>” by <strong>Chris Arnade</strong></li>
 <li>“<a href="https://medium.com/@bennetthartz/location-appropriate-bike-racks-of-minneapolis-273bdc67046d">Location-appropriate bike racks of Minneapolis</a>” by <strong>Bennet Hartz</strong></li>
-<li>“<a href="https://www.youtube.com/watch?v=d8PndpFPL8g">Populism and media revolutions</a>” by <strong>Hank Green</strong></li>
-<li>“<a href="https://www.youtube.com/watch?v=0FwM8HdOY-A">Fix the fucking networks</a>” by <strong>Erin Kissane</strong></li>
 <li>“<a href="https://kjaymiller.com/blog/how-long-should-we-be-in-charge.html">How long should we be in charge?</a>” by <strong>Jay Miller</strong></li>
 <li>“<a href="https://medium.com/@dakara.liberty/boredom-sharpens-the-mind-752d4b44d05d">Boredom sharpens the mind</a>” by <strong>Dakara</strong></li>
 <li>“<a href="https://www.youtube.com/@CannedFishFiles">Canned Fish Files</a>” by <strong>Matthew Carlson</strong></li>
@@ -59,20 +55,17 @@
 <li>“<a href="https://www.npr.org/2024/01/17/1224955473/social-media-algorithm-filterworld">Algorithms flatten culture</a>” by <strong>Tonya Mosley</strong></li>
 <li>“<a href="https://cassidoo.co/post/human-curation">I miss human curation</a>”</li>
 <li>“<a href="https://www.niemanlab.org/2023/12/the-robots-will-make-us-more-human">Robots will make us more human</a>” by <strong>Andrew Golis</strong></li>
-<li>“<a href="https://moonbase.lgbt/blog/i-want-to-see-my-friends-posts">I want to see my friends’ posts</a>” by <strong>Luna</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=XZ3w_jec1v8">The Economics of Programming Languages</a>” by <strong>Evan Czaplicki</strong></li>
 <li>“<a href="https://taylor.town/black-holes">Don't play near black holes</a>” by <strong>Taylor Troesh</strong></li>
-<li>“<a href="https://www.marginalia.nu/log/82_killing_community">Killing Community</a>” by <strong>marginalia.nu</strong></li>
-<li>“<a href="https://www.marginalia.nu/log/19-website-discoverability-crisis">The Small Website Discoverability Crisis</a>” by <strong>marginalia.nu</strong></li>
 <li>“<a href="https://www.theindex.media/p/the-elegance-of-endurance-what-centuries">Elegance of endurance</a>” by <strong>Joan Westenberg</strong></li>
-<li>“<a href="https://www.theindex.media/p/the-chaos-of-social-media-vs-the">The chaos of Social Media vs. the order of RSS</a>” by <strong>Joan Westenberg</strong></li>
 <li>“<a href="https://nedbatchelder.com/blog/202310/reflected_energy.html">Reflected energy</a>” by <strong>Ned Batchelder</strong></li>
-<li>“<a href="https://nedbatchelder.com/blog/202310/where_did_everyone_go.html">Where did everyone go?</a>” by <strong>Ned Batchelder</strong></li>
 <li>“<a href="https://newsletter.thejorgemedina.com/p/youre-not-lacking-creativity-youre">You’re not lacking creativity, you’re overwhelmed</a>” by <strong>Jorge Medina</strong></li>
 <li>“<a href="https://www.asomo.co/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>”</li>
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://shonumi.github.io/articles.html">Edge of Emulation</a>” by <strong>D. S. Baxter</strong></li>
+<li>“<a href="https://youtu.be/2vC-m4k5yZ8?feature=shared">Every NES & Famicom Add-on</a>”</li>
 <li>“<a href="https://picandocodigo.net/2025/nintendo-america-latina-90s-pirateria-famicom">Piratería y Famicom: Nintendo en América Latina en la década de los 90</a>” by <strong>Fernando Briano</strong></li>
 <li>“<a href="https://eli.lipsitz.net/posts/internet-connected-pinball">Connecting a 1980s pinball machine to the internet</a>” by <strong>Eli Lipsitz</strong></li>
 <li>“<a href="https://jamchamb.net/2018/07/11/animal-crossing-nes-emulator-hacks.html">Exploiting Animal Crossing's NES emulator</a>” by <strong>James Chambers</strong></li>
@@ -80,6 +73,7 @@
 <li>“<a href="https://www.jofamo.com/blog/secrets-of-the-pocket-camera">Secrets of the Pocket Camera</a>” by <strong>Jonathan Traynor</strong></li>
 <li>“<a href="https://youtu.be/RG8ljpIwsgc">F-Zero X can't be made today</a>” by <strong>Sepi</strong></li>
 <li>“<a href="https://pictogb.com">Picture to Game Boy</a>” by <strong>Jesse Doherty</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=aQ3U82Ulro0">Pikmin 1²</a>” by <strong>PikHacker</strong></li>
 <li>“<a href="https://tedium.co/2024/12/02/nintendo-expansion-port-history">NES expansion port</a>” by <strong>Ernie Smith</strong></li>
 <li>“<a href="https://www.infochunk.com/schannel/index.html">Sega Channel game image file format</a>”</li>
 <li>“<a href="https://en.wikipedia.org/wiki/Microsoft_Entertainment_Pack:_The_Puzzle_Collection">Microsoft Entertainment Pack: The Puzzle Collection</a>”</li>
@@ -139,6 +133,7 @@
 </ul>
 <h2>Security</h2>
 <ul>
+<li>“<a href="https://sgued.fr/blog/der-pem-cert">Certificate that is PEM and DER encoded</a>” by <strong>Soso</strong></li>
 <li>“<a href="https://boehs.org/node/homomorphic-encryption">Homomorphic Encryption in iOS 18</a>” by <strong>Evan Boehs</strong></li>
 <li>“<a href="https://blog.yossarian.net/2024/11/18/Security-means-securing-people-where-they-are">Security means securing people where they are</a>” by <strong>William Woodruff</strong></li>
 <li>“<a href="https://neilmadden.blog/2024/09/18/digital-signatures-and-how-to-avoid-them">Digital signatures and how to avoid them</a>” by <strong>Neil Madden</strong></li>
@@ -156,12 +151,40 @@
 <li>“<a href="https://alexgaynor.net/2023/oct/02/defining-the-memory-safety-problem">Defining the memory safe problem</a>” by <strong>Alex Gaynor</strong></li>
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
+<h2>Social Media</h2>
+<ul>
+<li>“<a href="https://schedule.sxsw.com/2025/events/PP147154">Digital sovereignty is the new influencer status</a>” by <strong>Molly White</strong></li>
+<li>“<a href="https://www.seven39.com">Social network that's only open from 7:39pm to 10:39pm EST</a>”</li>
+<li>“<a href="https://mastodon.social/@Ullilust/114138199183667985">Comics about Mastodon</a>” by <strong>Ulli Lust</strong></li>
+<li>“<a href="https://www.noahpinion.blog/p/this-thing-will-fail">MAGA will fail because it's an internet thing</a>” by <strong>Noah Smith</strong></li>
+<li>“<a href="https://www.noahpinion.blog/p/vertical-communities">Vertical communities</a>” by <strong>Noah Smith</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=QEJpZjg8GuA">Algorithms are breaking how we think</a>” by <strong>Alec Watson</strong></li>
+<li>“<a href="https://rknight.me/blog/quiet">Quiet</a>” by <strong>Robb Knight</strong></li>
+<li>“<a href="http://hallofdreams.org/posts/physicsforums">PhysicsForums and the Dead Internet Theory</a>” by <strong>David and Felipe</strong></li>
+<li>“<a href="https://retro.social/@ifixcoinops/113838462085835742">Sending data between two phones</a>”</li>
+<li>“<a href="https://pudding.cool/2023/09/invisible-epidemic">Loneliness epidemic</a>” by <strong>Alvin Chang</strong></li>
+<li>“<a href="https://www.niemanlab.org/2024/12/declaring-platform-independence">Declaring platform independence</a>” by <strong>Jason Koebler</strong></li>
+<li>“<a href="https://www.mnot.net/blog/2024/11/29/platforms">Platform advantages: not just network effects</a>” by <strong>Mark Nottingham</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=d8PndpFPL8g">Populism and media revolutions</a>” by <strong>Hank Green</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=0FwM8HdOY-A">Fix the fucking networks</a>” by <strong>Erin Kissane</strong></li>
+<li>“<a href="https://moonbase.lgbt/blog/i-want-to-see-my-friends-posts">I want to see my friends’ posts</a>” by <strong>Luna</strong></li>
+<li>“<a href="https://www.marginalia.nu/log/82_killing_community">Killing Community</a>” by <strong>marginalia.nu</strong></li>
+<li>“<a href="https://www.marginalia.nu/log/19-website-discoverability-crisis">The Small Website Discoverability Crisis</a>” by <strong>marginalia.nu</strong></li>
+<li>“<a href="https://www.theindex.media/p/the-chaos-of-social-media-vs-the">The chaos of Social Media vs. the order of RSS</a>” by <strong>Joan Westenberg</strong></li>
+<li>“<a href="https://nedbatchelder.com/blog/202310/where_did_everyone_go.html">Where did everyone go?</a>” by <strong>Ned Batchelder</strong></li>
+<li>“<a href="https://rknight.me/blog/setting-up-mastodon-author-tags">Mastodon Author Tags</a>” by <strong>Robb Knight</strong></li>
+</ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://navigation-queues-navigation-cues.f451.studio">Navigation queues, navigation cues</a>” by <strong>Domitille Debret</strong></li>
+<li>“<a href="https://open-web-advocacy.org/blog/uk-regulators-final-verdict--apples-browser-engine-ban-harms-competition">Apple's browser engine ban harms competition</a>”</li>
+<li>“<a href="https://www.youtube.com/watch?v=rFGcqWbwvyc">There is nothing new here</a>” by <strong>Angela Collier</strong></li>
+<li>“<a href="https://drewdevault.com/2025/03/17/2025-03-17-Stop-externalizing-your-costs-on-me.html">Stop externalizing your costs directly into my face</a>” by <strong>Drew DeVault</strong></li>
 <li>“<a href="https://www.hytradboi.com/2025/943c54af-ea5f-4d3e-b3e3-7767b5a1bfc5-good-thing-were-not-writing-a-database">Good thing we're not writing a database</a>” by <strong>Peter van Hardenberg</strong></li>
 <li>“<a href="https://tech.chrishardie.com/2025/rss-feed-of-your-website">How far I'll go to make an RSS feed of your website</a>” by <strong>Chris Hardie</strong></li>
 <li>“<a href="https://sarasoueidan.com/blog/css-shapes">Creating non-rectangular layouts with CSS shapes</a>” by <strong>Sara Soueidan</strong></li>
 <li>“<a href="https://shkspr.mobi/blog/2025/02/why-are-qr-codes-with-capital-letters-smaller-than-qr-codes-with-lower-case-letters">YELL IN YOUR QR CODES</a>” by <strong>Terence Eden</strong></li>
+<li>“<a href="https://www.miriamsuzanne.com/2025/02/12/tech-ai-wtf">Tech continues to be political</a>”</li>
 <li>“<a href="https://chadnauseam.com/coding/random/calculator-app">Not anyone can make a calculator app</a>” by <strong>Chad Nauseam</strong></li>
 <li>“<a href="https://thib.me/django-in-government">Django in governments</a>” by <strong>Thibaud</strong></li>
 <li>“<a href="https://audmcname.com/comics/rss-is-not-dead-yet">RSS is not dead yet</a>” by <strong>Audra McNamee</strong></li>
@@ -169,18 +192,14 @@
 <li>“<a href="https://www.localfirst.fm/s1">Apps vs Files</a>” by <strong>Gordon Brander, Peter van Hardenberg, and Jess Martin</strong></li>
 <li>“<a href="https://willowprotocol.org">Willow Protocol</a>” by <strong>Aljoscha Meyer and Sam Gwilym</strong></li>
 <li>“<a href="https://arty.name/localstorage.html">Web localStorage limits</a>”</li>
-<li>“<a href="http://hallofdreams.org/posts/physicsforums">PhysicsForums and the Dead Internet Theory</a>” by <strong>David and Felipe</strong></li>
 <li>“<a href="https://jon.work/og">File systems: the original hypermedia</a>” by <strong>Jon Secchis</strong></li>
 <li>“<a href="http://simplecpudesign.com">Simple CPU design</a>”</li>
-<li>“<a href="https://retro.social/@ifixcoinops/113838462085835742">Sending data between two phones</a>”</li>
 <li>“<a href="https://www.vintagecomputing.com/index.php/archives/3292/the-pc-is-dead-its-time-to-make-computing-personal-again">Personal computing is dead</a>” by <strong>Benj Edwards</strong></li>
 <li>“<a href="https://drew.shoes/posts/sup">sup</a>” by <strong>Drew Schuster</strong></li>
 <li>“<a href="https://alexanderpetros.com/triptych">Triptych Proposals</a>” by <strong>Alexander Petros and Carson Gross</strong></li>
 <li>“<a href="https://lens.rknight.me">Lens</a>” by <strong>Robb Knight</strong></li>
 <li>“<a href="https://mjg59.dreamwidth.org/70954.html">GPUs, not TPMs, are the root of hardware DRM</a>” by <strong>Matthew Garrett</strong></li>
-<li>“<a href="https://www.youtube.com/watch?v=aQ3U82Ulro0">Pikmin 1²</a>” by <strong>PikHacker</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=inRB6ull5WQ">The life and death of HTMX</a>” by <strong>Alexander Petros</strong></li>
-<li>“<a href="https://www.niemanlab.org/2024/12/declaring-platform-independence">Declaring platform independence</a>” by <strong>Jason Koebler</strong></li>
 <li>“<a href="https://youtu.be/JE5u5mUT6gQ?t=1937">What do we owe each other?</a>” by <strong>Sumana Harihareswara</strong></li>
 <li>“<a href="https://funds.ecosyste.ms">Supporting the software you use, not the software you see</a>”</li>
 <li>“<a href="https://spatialpixel.com">Spatial Pixel</a>”</li>
@@ -188,7 +207,6 @@
 <li>“<a href="https://www.youtube.com/watch?v=wTv5kvuP1hI">The Timeless Way of Software</a>” by <strong>Taylor Troesh</strong></li>
 <li>“<a href="https://infrequently.org/2024/11/if-not-react-then-what">If not React, then what?</a>” by <strong>Alex Russell</strong></li>
 <li>“<a href="https://www.mnot.net/blog/2024/08/25/feeds">What RSS needs</a>” by <strong>Mark Nottingham</strong></li>
-<li>“<a href="https://www.mnot.net/blog/2024/11/29/platforms">Platform advantages: not just network effects</a>” by <strong>Mark Nottingham</strong></li>
 <li>“<a href="https://calpaterson.com/porter.html">Building LLMs is probably not a good business</a>” by <strong>Cal Paterson</strong></li>
 <li>“<a href="https://articles.foletta.org/post/2024-01-08-a-day-in-the-life-the-bgp-table">Global BGP table</a>” by <strong>Greg Foletta</strong></li>
 <li>“<a href="https://grayduck.mn/2024/11/21/handling-cookies-is-a-minefield">Handling cookies is a minefield</a>” by <strong>April King</strong></li>
@@ -199,7 +217,6 @@
 <li>“<a href="https://blog.jim-nielsen.com/2024/enabled-by-default">Enabled by default</a>” by <strong>Jim Nielsen</strong></li>
 <li>“<a href="https://www.smolways.com/post/where-the-digital-sidewalk-ends">Where the digital sidewalk ends</a>” by <strong>Huston Bokinsky</strong></li>
 <li>“<a href="https://dri.es/my-solar-powered-and-self-hosted-website">Solar-powered self-hosted website</a>” by <strong>Dries Buytaert</strong></li>
-<li>“<a href="https://rknight.me/blog/setting-up-mastodon-author-tags">Mastodon Author Tags</a>” by <strong>Robb Knight</strong></li>
 <li>“<a href="https://blog.datadesk.eco/p/methane-mysteries">Solving methane mysteries with satellite imagery</a>” by <strong>Louis Goddard</strong></li>
 <li>“<a href="https://benn.substack.com/p/do-ai-companies-work">Do AI companies work?</a>” by <strong>Benn Stancil</strong></li>
 <li>“<a href="https://berjon.com/infrastructure-shock">The Infrastructure Shock</a>” by <strong>Debbie Chachra</strong></li>
@@ -242,6 +259,8 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://cuberule.com">The Cube Rule</a>”</li>
+<li>“<a href="https://rotatingsandwiches.com">Rotating sandwiches</a>”</li>
 <li>“<a href="https://localthunk.com/blog/solitaire">Solitaire</a>” by <strong>Localthunk</strong></li>
 <li>“<a href="https://www.tedwiggin.com/MIMT.html">Ghost House</a>” by <strong>Ted Wiggin</strong></li>
 <li>“<a href="https://vietgd.com">Vietnamese Graphic Design</a>”</li>
