New article about Switch 2

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,8 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://www.youtube.com/watch?v=FRjGhCQi4U8">Skeptical Hedonism</a>” by <strong>Hank Green</strong></li>
+<li>“<a href="https://supernuclear.substack.com/p/stoop-coffee-how-a-simple-idea-transformed">How a simple idea transformed my neighborhood</a>” by <strong>Patty Smith</strong></li>
 <li>“<a href="https://protectdemocracy.org/how-to-protect-democracy">How you can protect Democracy</a>”</li>
 <li>“<a href="https://dansinker.com/posts/2025-02-23-dale">What felt impossible became possible</a>” by <strong>Dan Sinker</strong></li>
 <li>“<a href="https://craigmod.com/ridgeline/203">Garbage</a>” by <strong>Craig Mod</strong></li>
@@ -176,6 +178,8 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://alexgaynor.net/2025/mar/25/postels-law-and-the-three-ring-circus">Postel's Law and the three ring circus</a>” by <strong>Alex Gaynor</strong></li>
+<li>“<a href="https://greenvitriol.com/posts/sync-engine-for-everyone">A synchronization engine for everyone</a>” by <strong>Cristiano B.</strong></li>
 <li>“<a href="https://navigation-queues-navigation-cues.f451.studio">Navigation queues, navigation cues</a>” by <strong>Domitille Debret</strong></li>
 <li>“<a href="https://open-web-advocacy.org/blog/uk-regulators-final-verdict--apples-browser-engine-ban-harms-competition">Apple's browser engine ban harms competition</a>”</li>
 <li>“<a href="https://www.youtube.com/watch?v=rFGcqWbwvyc">There is nothing new here</a>” by <strong>Angela Collier</strong></li>
