--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,30 +15,30 @@
             </p>
         </div>
         <div class="col-2 col-4-sm" style="text-align: right;">
-            <div>Location:</div>
-            <div>Timezone:</div>
-            <div>Pronouns:</div>
             <div>Email:</div>
             <div>Email:</div>
+            <div>Signal:</div>
             <div>Mastodon:</div>
             <div>Bluesky:</div>
-            <div>Signal:</div>
             <div>GitHub:</div>
             <div>Discord:</div>
             <div>LinkedIn:</div>
+            <hr>
+            <div><strike>Twitter:</strike></div>
+            <div><strike>Keybase:</strike></div>
         </div>
         <div class="col-4 col-8-sm">
-            <div><a href="https://www.openstreetmap.org/relation/136712">Minneapolis, MN</a></div>
-            <div><a href="https://time.is/Minneapolis">US Central</a></div>
-            <div>he/him</div>
             <div><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer">sethmichaellarson@gmail.com</a></div>
             <div><a href="mailto:seth@python.org" target="_blank" rel="noopener noreferrer">seth@python.org</a></div>
+            <div><a href="https://signal.me/#eu/gpQLD3Q+O1Azvo7cD5nggei42PazYNXHnL1XYLaumYjv/ZCr09NK0Z7uJKTlnFJw" target="_blank" rel="me noopener noreferrer">sethmlarson.99</a></div>
             <div><a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="me noopener noreferrer">sethmlarson@fosstodon.org</a></div>
             <div><a href="https://bsky.app/profile/sethmlarson.dev" target="_blank" rel="me noopener noreferrer">sethmlarson.dev</a></div>
-            <div><a href="https://signal.me/#eu/gpQLD3Q+O1Azvo7cD5nggei42PazYNXHnL1XYLaumYjv/ZCr09NK0Z7uJKTlnFJw" target="_blank" rel="me noopener noreferrer">sethmlarson.99</a></div>
             <div><a href="https://github.com/sethmlarson" target="_blank" rel="me noopener noreferrer">sethmlarson</a></div>
             <div><a href="https://discord.com/users/481989102951202817" target="_blank" rel="noopener noreferrer">sethmlarson</a></div>
             <div><a href="https://linkedin.com/in/sethmlarson/" target="_blank" rel="noopener noreferrer">sethmlarson</a></div>
+            <hr>
+            <div>sethmlarson</div>
+            <div>sethmlarson</div>
         </div>
     </div>
 {% endblock %}
