--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,9 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://www.theguardian.com/us-news/ng-interactive/2025/apr/13/end-times-fascism-far-right-trump-musk">End-times fascism</a>” by <strong>Naomi Klein and Astra Taylor</strong></li>
+<li>“<a href="https://simone.org/advertising">What if we made advertising illegal?</a>”</li>
+<li>“<a href="https://engineerscanada.ca/nem2025/feature-stories/100-years-of-the-iron-ring-a-symbol-of-an-engineers-commitment">Iron rings: a symbol of engineer's commitment</a>”</li>
 <li>“<a href="https://www.youtube.com/watch?v=FRjGhCQi4U8">Skeptical Hedonism</a>” by <strong>Hank Green</strong></li>
 <li>“<a href="https://supernuclear.substack.com/p/stoop-coffee-how-a-simple-idea-transformed">How a simple idea transformed my neighborhood</a>” by <strong>Patty Smith</strong></li>
 <li>“<a href="https://protectdemocracy.org/how-to-protect-democracy">How you can protect Democracy</a>”</li>
@@ -66,6 +69,10 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://www.homebrew-factory.com">Homebrew Factory</a>”</li>
+<li>“<a href="https://www.youtube.com/watch?v=n3dFAK3Owtg">Legend of Zelda and miniature gardens (箱庭)</a>” by <strong>Javed Sterritt</strong></li>
+<li>“<a href="https://en-americas-support.nintendo.com/app/answers/detail/a_id/68415/~/nintendo-switch%26nbsp%3B2-game-key-card-overview">Nintendo Switch 2 Game-Key Cards</a>”</li>
+<li>“<a href="https://brainbaking.com/post/2025/03/an-ode-to-the-game-boy-advance">An Ode To The Game Boy Advance</a>” by <strong>Wouter Groeneveld</strong></li>
 <li>“<a href="https://shonumi.github.io/articles.html">Edge of Emulation</a>” by <strong>D. S. Baxter</strong></li>
 <li>“<a href="https://youtu.be/2vC-m4k5yZ8?feature=shared">Every NES & Famicom Add-on</a>”</li>
 <li>“<a href="https://picandocodigo.net/2025/nintendo-america-latina-90s-pirateria-famicom">Piratería y Famicom: Nintendo en América Latina en la década de los 90</a>” by <strong>Fernando Briano</strong></li>
@@ -93,8 +100,8 @@
 <li>“<a href="https://gamebanana.com/mods/544238">Super Mario 64 in Sonic Adventure DX</a>” by <strong>Sora</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=1-LWI2tGfhQ">FlippyDrive for the GameCube</a>” by <strong>Macho Nacho</strong></li>
 <li>“<a href="https://fabiensanglard.net/snes_video/index.html">Super Nintendo Video System</a>” by <strong>Fabien Sanglard</strong></li>
-<li>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by <strong>Kirbyster</strong></li>
 <li>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by <strong>AsumSaus</strong></li>
+<li>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by <strong>Kirbyster</strong></li>
 <li>“<a href="https://orangegb.com/orangefm">ORANGE FM, Game Boy cartridge for FM Radio</a>” by <strong>Evan Barger</strong></li>
 <li>“<a href="http://www.blarg.ca/2021/02/15/using-a-gamecube-ascii-keyboard-controller-with-libogc">Gamecube ASCII keyboard controller and libogc</a>” by <strong>Gered King</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=699HVbOKNtc">GameCube, Wii, Wii U, and PC connected via Broadband Adapter</a>” by <strong>Good Vibes Gaming</strong></li>
@@ -155,6 +162,9 @@
 </ul>
 <h2>Social Media</h2>
 <ul>
+<li>“<a href="https://cheapskatesguide.org/articles/ai-against-small-internet.html">AI filtering the indie web</a>”</li>
+<li>“<a href="https://speedbumpapp.com/en/blog/how-to-reduce-screen-time">Guide for reducing screen time</a>”</li>
+<li>“<a href="https://www.theverge.com/social/639811/view-counts-tiktok-instagram-x-youtube-lies">Digital 'views' are lies</a>”</li>
 <li>“<a href="https://schedule.sxsw.com/2025/events/PP147154">Digital sovereignty is the new influencer status</a>” by <strong>Molly White</strong></li>
 <li>“<a href="https://www.seven39.com">Social network that's only open from 7:39pm to 10:39pm EST</a>”</li>
 <li>“<a href="https://mastodon.social/@Ullilust/114138199183667985">Comics about Mastodon</a>” by <strong>Ulli Lust</strong></li>
@@ -178,6 +188,20 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://pwy.io/posts/marching-events">iCal and ray-casting</a>” by <strong>Patryk Wychowaniec</strong></li>
+<li>“<a href="https://jackscogito.blogspot.com/2025/04/e-ink-mode-making-web-pages-easier-to.html">e-Ink for web pages</a>”</li>
+<li>“<a href="https://tante.cc/2025/04/15/these-are-not-the-same">What physical infrastructure will be left by the AI bubble?</a>” by <strong>Jürgen Geuter</strong></li>
+<li>“<a href="https://grumpy.systems/2023/please-dont-sell-space-in-your-homelab">Don't sell space in your homelab</a>” by <strong>Grumpy</strong></li>
+<li>“<a href="https://www.emptywheel.net/2017/09/14/software-is-a-long-con">Software is a long con</a>” by <strong>Quinn Norton</strong></li>
+<li>“<a href="https://rakhim.exotext.com/but-what-if-i-really-want-a-faster-horse">Every medium doesn't have to be TikTok</a>” by <strong>Rakhim</strong></li>
+<li>“<a href="https://webrtcforthecurious.com">WebRTC for the curious</a>”</li>
+<li>“<a href="https://blog.mojeek.com/2025/04/searchception.html">Searchception</a>” by <strong>Colin Hayhurst</strong></li>
+<li>“<a href="https://alexgaynor.net/2025/apr/08/putting-a-price-tag-on-open-source">Putting a price on open source</a>” by <strong>Alex Gaynor</strong></li>
+<li>“<a href="https://0xda.de/blog/2025/04/hiding-elements-that-require-javascript-without-javascript">Hiding elements that require JavaScript without JavaScript</a>”</li>
+<li>“<a href="https://emilygorcenski.com/post/owning-my-own-data-part-1-integrating-a-self-hosted-calendar-solution">Self-hosted digital calendar</a>” by <strong>Emily Gorcenski</strong></li>
+<li>“<a href="https://diff.wikimedia.org/2025/04/01/how-crawlers-impact-the-operations-of-the-wikimedia-projects">Crawlers and Wikimedia projects</a>”</li>
+<li>“<a href="https://www.revoluciana.net/how-to-distribute-radical-stuff">Don't trust your printer</a>” by <strong>Luciana Inara</strong></li>
+<li>“<a href="https://ia.net/topics/markdown-and-the-slow-fade-of-the-formatting-fetish">Markdown and the slow fade of the formatting fetish</a>” by <strong>Oliver Reichenstein</strong></li>
 <li>“<a href="https://alexgaynor.net/2025/mar/25/postels-law-and-the-three-ring-circus">Postel's Law and the three ring circus</a>” by <strong>Alex Gaynor</strong></li>
 <li>“<a href="https://greenvitriol.com/posts/sync-engine-for-everyone">A synchronization engine for everyone</a>” by <strong>Cristiano B.</strong></li>
 <li>“<a href="https://navigation-queues-navigation-cues.f451.studio">Navigation queues, navigation cues</a>” by <strong>Domitille Debret</strong></li>
@@ -263,6 +287,9 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://sharpletters.net/2025/04/16/hdr-emoji">HDR‑infused emoji</a>” by <strong>Corry Haines</strong></li>
+<li>“<a href="https://nlnetlabs.nl/news/2025/Apr/01/phonebook-of-the-internet">Internet phone book</a>”</li>
+<li>“<a href="https://en.wikipedia.org/wiki/Slopsquatting">Slopsquatting</a>”</li>
 <li>“<a href="https://cuberule.com">The Cube Rule</a>”</li>
 <li>“<a href="https://rotatingsandwiches.com">Rotating sandwiches</a>”</li>
 <li>“<a href="https://localthunk.com/blog/solitaire">Solitaire</a>” by <strong>Localthunk</strong></li>
