--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,7 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://pluralistic.net/2025/04/24/hermit-kingdom">Every complex ecosystem has parasites (24 Apr 2025)</a>”</li>
 <li>“<a href="https://www.theguardian.com/us-news/ng-interactive/2025/apr/13/end-times-fascism-far-right-trump-musk">End-times fascism</a>” by <strong>Naomi Klein and Astra Taylor</strong></li>
 <li>“<a href="https://simone.org/advertising">What if we made advertising illegal?</a>”</li>
 <li>“<a href="https://engineerscanada.ca/nem2025/feature-stories/100-years-of-the-iron-ring-a-symbol-of-an-engineers-commitment">Iron rings: a symbol of engineer's commitment</a>”</li>
@@ -69,6 +70,7 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://mattgreer.dev/blog/printing-ereader-cards-part-4">Printing Nintendo E-Reader Cards: Part 4, troubleshooting</a>”</li>
 <li>“<a href="https://www.homebrew-factory.com">Homebrew Factory</a>”</li>
 <li>“<a href="https://www.youtube.com/watch?v=n3dFAK3Owtg">Legend of Zelda and miniature gardens (箱庭)</a>” by <strong>Javed Sterritt</strong></li>
 <li>“<a href="https://en-americas-support.nintendo.com/app/answers/detail/a_id/68415/~/nintendo-switch%26nbsp%3B2-game-key-card-overview">Nintendo Switch 2 Game-Key Cards</a>”</li>
@@ -100,8 +102,8 @@
 <li>“<a href="https://gamebanana.com/mods/544238">Super Mario 64 in Sonic Adventure DX</a>” by <strong>Sora</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=1-LWI2tGfhQ">FlippyDrive for the GameCube</a>” by <strong>Macho Nacho</strong></li>
 <li>“<a href="https://fabiensanglard.net/snes_video/index.html">Super Nintendo Video System</a>” by <strong>Fabien Sanglard</strong></li>
-<li>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by <strong>AsumSaus</strong></li>
 <li>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by <strong>Kirbyster</strong></li>
+<li>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by <strong>AsumSaus</strong></li>
 <li>“<a href="https://orangegb.com/orangefm">ORANGE FM, Game Boy cartridge for FM Radio</a>” by <strong>Evan Barger</strong></li>
 <li>“<a href="http://www.blarg.ca/2021/02/15/using-a-gamecube-ascii-keyboard-controller-with-libogc">Gamecube ASCII keyboard controller and libogc</a>” by <strong>Gered King</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=699HVbOKNtc">GameCube, Wii, Wii U, and PC connected via Broadband Adapter</a>” by <strong>Good Vibes Gaming</strong></li>
@@ -142,7 +144,8 @@
 </ul>
 <h2>Security</h2>
 <ul>
-<li>“<a href="https://sgued.fr/blog/der-pem-cert">Certificate that is PEM and DER encoded</a>” by <strong>Soso</strong></li>
+<li>“<a href="https://jonathan.protzenko.fr/2025/04/18/python.html">15,000 lines of verified cryptography now in Python</a>”</li>
+<li>“<a href="https://sgued.fr/blog/der-pem-cert">Certificate that is PEM and DER encoded</a>” by <strong>Sosthène Guédon</strong></li>
 <li>“<a href="https://boehs.org/node/homomorphic-encryption">Homomorphic Encryption in iOS 18</a>” by <strong>Evan Boehs</strong></li>
 <li>“<a href="https://blog.yossarian.net/2024/11/18/Security-means-securing-people-where-they-are">Security means securing people where they are</a>” by <strong>William Woodruff</strong></li>
 <li>“<a href="https://neilmadden.blog/2024/09/18/digital-signatures-and-how-to-avoid-them">Digital signatures and how to avoid them</a>” by <strong>Neil Madden</strong></li>
@@ -162,9 +165,10 @@
 </ul>
 <h2>Social Media</h2>
 <ul>
+<li>“<a href="https://madhavajay.com/the-cold-start-problem-using-network-effects-to-scale-your-product">The Cold Start Problem: Using Network Effects to Scale Your Product - A Review</a>”</li>
 <li>“<a href="https://cheapskatesguide.org/articles/ai-against-small-internet.html">AI filtering the indie web</a>”</li>
-<li>“<a href="https://speedbumpapp.com/en/blog/how-to-reduce-screen-time">Guide for reducing screen time</a>”</li>
-<li>“<a href="https://www.theverge.com/social/639811/view-counts-tiktok-instagram-x-youtube-lies">Digital 'views' are lies</a>”</li>
+<li>“<a href="https://speedbumpapp.com/en/blog/how-to-reduce-screen-time">Guide for reducing screen time</a>” by <strong>Mario Ortiz Manero</strong></li>
+<li>“<a href="https://www.theverge.com/social/639811/view-counts-tiktok-instagram-x-youtube-lies">Digital 'views' are lies</a>” by <strong>David Pierce</strong></li>
 <li>“<a href="https://schedule.sxsw.com/2025/events/PP147154">Digital sovereignty is the new influencer status</a>” by <strong>Molly White</strong></li>
 <li>“<a href="https://www.seven39.com">Social network that's only open from 7:39pm to 10:39pm EST</a>”</li>
 <li>“<a href="https://mastodon.social/@Ullilust/114138199183667985">Comics about Mastodon</a>” by <strong>Ulli Lust</strong></li>
@@ -287,6 +291,9 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://hyperwood.org">Hyperwood – Open-Source Furniture</a>”</li>
+<li>“<a href="https://blog.infected.systems/posts/2025-04-21-this-blog-is-hosted-on-a-nintendo-wii">This blog is hosted on a Nintendo Wii</a>”</li>
+<li>“<a href="https://kuberwastaken.github.io/blog/Projects/How-I-Managed-To-Get-Doom-In-A-QR-Code">How I Managed To Get Doom In A QR Code</a>”</li>
 <li>“<a href="https://sharpletters.net/2025/04/16/hdr-emoji">HDR‑infused emoji</a>” by <strong>Corry Haines</strong></li>
 <li>“<a href="https://nlnetlabs.nl/news/2025/Apr/01/phonebook-of-the-internet">Internet phone book</a>”</li>
 <li>“<a href="https://en.wikipedia.org/wiki/Slopsquatting">Slopsquatting</a>”</li>
